# OpenNavMap

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  environment.yaml  package.xml  requirements.txt  test_torch_install.py
app/: altas_dataset.py  example_usage.sh  litevloc_altas.py  litevloc_altas_app.py
doc/: instruction_map_merging.md
docs/: instruction_data_collection.md  instruction_dataset.md  instruction_map_merging.md  instruction_segment_change.md  instruction_vloc_data.md  instruction_vnav_real_robot.md  instruction_vnav_simu_matterport3d.md  repo_structure_brief.md  todo-opennavmap-viz-20260703.md
launch/: run_vloc_offline_files.launch  run_vloc_online_anymal.launch  run_vloc_online_simuenv.launch
python/: global_planner.py  image_graph.py  image_node.py  loc_pipeline.py  map_manager.py  map_merge_pipeline.py  object_graph.py  object_node.py  object_provider.py  point_graph.py  point_node.py  pose3slam_g2o.py  ros_global_planner.py  ros_loc_pipeline.py  ros_pose_fusion.py  ros_publish_goal_image.py  ros_publish_graph.py  utils_map_merging.py  utils_object_geom.py
rviz_cfg/: depth_registration.rviz  topo_graph_anymal.rviz  topo_graph_anymal_camera_frame.rviz  topo_graph_anymal_paper.rviz  topo_graph_matterport3d_paper.rviz
scripts/: run_batch_extract_vpr_desc.sh  run_batch_extract_vpr_iqa.sh  run_batch_gendata.sh  run_batch_vpr_seq_slam.sh  run_benchmark_kf_evaluation.sh  run_benchmark_kf_selection.sh  run_benchmark_kf_submission.sh  run_benchmark_rpe_depth_generation.sh  run_benchmark_rpe_evaluation.sh  run_ego_blur.sh  (+7 more)
(+201 files in other folders)
